--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "healthy-food-front",
+  "name": "healthfood",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.18",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
+    "miragejs": "^0.1.43",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^17.0.20",
+    "@types/react-cookies": "^0.1.0",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-router-hash-link": "^2.4.4",
+    "@types/styled-components": "^5.1.18",
+    "gh-pages": "^3.2.3",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
